--- a/package.json
+++ b/package.json
@@ -9,14 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@types/node": "18.14.2",
-    "@types/react": "18.0.28",
+    "@types/node": "^18.14.2",
+    "@types/react": "^18.0.28",
     "@types/react-dom": "18.0.11",
+    "axios": "^1.3.4",
+    "bulma": "^0.9.4",
+    "chart.js": "^4.2.1",
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.1",
     "next": "13.2.1",
+    "next-auth": "^4.19.2",
+    "primeflex": "^3.3.0",
+    "primereact": "^9.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "4.9.5"
+    "react-transition-group": "^4.4.5",
+    "swr": "^2.0.4",
+    "typescript": "4.9.5",
+    "yup": "^1.0.2"
+  },
+  "devDependencies": {
+    "@types/next-auth": "^3.15.0"
   }
 }
